--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -2,21 +2,19 @@ on:
   push:
     branches: main
 
-name: Quarto Publish
+name: Publish
 
 jobs:
-  build-deploy:
+  quarto-publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-        
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-        
-      - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
+      - uses: actions/checkout@v4
+      
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+      
+      - uses: quarto-dev/quarto-actions/setup@v2
+      
+      - uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
