--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -13,17 +13,9 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
       
-      - name: Install R dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          packages: |
-            any::knitr
-            any::rmarkdown
-            any::tidyverse
-            any::ggplot2
-            any::dplyr
-            # AÑADE AQUÍ TODOS LOS PAQUETES QUE USAS
-      
+      - name: Install renv
+        uses: r-lib/actions/setup-renv@v2
+        
       - uses: quarto-dev/quarto-actions/setup@v2
       
       - uses: quarto-dev/quarto-actions/publish@v2
