--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,8 @@
 format:
   html:
-    self-contained: false  
+    include-after-body: gitcus.html
+    html-math-method: katex
+    code-tools: true
+    self-contained: false  # ✅ Deja esto en false
+execute:
+  warning: false
