--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -30,11 +30,9 @@ jobs:
         
       - uses: quarto-dev/quarto-actions/setup@v2
       
-      - name: Render
-        run: quarto render entrega4.qmd --output-dir=docs
-        
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+      - name: Render and Publish
+        run: |
+          quarto render entrega4.qmd --output-dir=docs
+          quarto publish gh-pages --no-prompt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
